--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
 body {
   background-color: rgb(147, 239, 175);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
 }
-section {
-  background-color: aqua;
+
+button {
+  position: absolute;
+  top: 2.25rem;
 }
+
+span.stone:nth-child(1) {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
+
+span.stone:nth-child(2) {
+  position: absolute;
+  top: 50px;
+  left: 100px;
+}
+
+span.stone:nth-child(3) {
+  position: absolute;
+  top: 90px;
+  left: 180px;
+}
+
+span.stone:nth-child(4) {
+  position: absolute;
+  top: 130px;
+  left: 260px;
+}
+
+span.stone:nth-child(5) {
+  position: absolute;
+  top: 170px;
+  left: 340px;
+}
+
+span.stone.in-pocket {
+  position: static; /* pocket 안에서는 정적 위치로 변경 */
+  margin-right: 10px; /* 각 돌 사이에 간격을 줄 수 있습니다 */
+}
+
+#greeting {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  bottom: 4.5rem;
+}
+
 #pocket {
   background-color: beige;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: fixed;
+  width: 65rem;
+  height: 9rem;
+  padding: 0.75rem 2.25rem;
+  bottom: 0;
+  > h3 {
+    margin-right: 1.2rem;
+  }
 }
