--- a/css/style.scss
+++ b/css/style.scss
@@ -3,78 +3,139 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-}
-
-body {
-  background-color: rgb(147, 239, 175);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  min-height: 100vh;
+  list-style: none;
+  box-sizing: border-box;
   position: relative;
 }
 
-button {
-  position: absolute;
-  top: 2.25rem;
+html {
+  font-size: 18px;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
 }
 
-span.stone:nth-child(1) {
-  position: absolute;
-  top: 10px;
-  left: 20px;
+:root {
+  --yellow: #f4ff7a;
 }
 
-span.stone:nth-child(2) {
-  position: absolute;
-  top: 50px;
-  left: 100px;
-}
-
-span.stone:nth-child(3) {
-  position: absolute;
-  top: 90px;
-  left: 180px;
-}
-
-span.stone:nth-child(4) {
-  position: absolute;
-  top: 130px;
-  left: 260px;
-}
-
-span.stone:nth-child(5) {
-  position: absolute;
-  top: 170px;
-  left: 340px;
-}
-
-span.stone.in-pocket {
-  position: static; /* pocket 안에서는 정적 위치로 변경 */
-  margin-right: 10px; /* 각 돌 사이에 간격을 줄 수 있습니다 */
-}
-
-#greeting {
-  position: absolute;
+body {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  bottom: 4.5rem;
+  background-color: darkolivegreen;
+  // min-height: 100vh;
+  // align-items: center;
 }
 
-#pocket {
-  background-color: beige;
+.altitude {
   display: flex;
-  justify-content: start;
-  align-items: center;
+  flex-direction: row;
   position: fixed;
-  width: 65rem;
-  height: 9rem;
-  padding: 0.75rem 2.25rem;
-  bottom: 0;
-  > h3 {
-    margin-right: 1.2rem;
+  top: 1.5rem;
+  left: 2rem;
+  > span {
+    margin-right: 5px;
   }
 }
+
+.i {
+  position: fixed;
+  top: 1.5rem;
+  right: 2rem;
+  width: 2.3rem;
+  height: 2.3rem;
+}
+
+.peek {
+  width: 100vw;
+  height: 100vh;
+  background-color: cadetblue;
+  z-index: -1;
+}
+
+.greeting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 4rem;
+  > h2 {
+    text-align: center;
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+  }
+}
+
+.pocket_bar {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0px;
+  #openCanvas_btn {
+    padding: 0.5rem 0.77rem 0.55rem 0.77rem;
+    background-color: var(--yellow);
+    margin-bottom: 1.11rem;
+  }
+}
+
+.pocket {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba($color: #000000, $alpha: 0.12);
+  width: 57.77rem;
+  padding: 0.88rem 1.33rem 1.66rem 1.33rem;
+  > span {
+    margin-right: 1rem;
+  }
+  #pocket_container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 5.11rem;
+  }
+}
+
+.ground {
+  position: relative;
+  display: flex;
+  width: 100vw;
+  height: 100 * 5vh;
+}
+
+.stone {
+  &:nth-child(1) {
+    top: 10px;
+    left: 20px;
+  }
+
+  &:nth-child(2) {
+    top: 50px;
+    left: 100px;
+  }
+
+  &:nth-child(3) {
+    top: 90px;
+    left: 180px;
+  }
+
+  &:nth-child(4) {
+    top: 130px;
+    left: 260px;
+  }
+
+  &:nth-child(5) {
+    top: 170px;
+    left: 340px;
+  }
+}
+
+// span.stone.in-pocket {
+//   position: static; /* pocket 안에서는 정적 위치로 변경 */
+//   margin-right: 10px; /* 각 돌 사이에 간격을 줄 수 있습니다 */
+// }
