--- a/css/style.scss
+++ b/css/style.scss
@@ -61,6 +61,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   bottom: 4rem;
+  display: none; //temporary
   > h2 {
     text-align: center;
     font-family: "Space Mono", monospace;
@@ -79,17 +80,18 @@ body {
 }
 
 #stoneStacker {
+  position: absolute;
   width: 57.77rem;
   height: 47.77rem;
   left: 50%;
-  bottom: -3.2rem;
+  bottom: 7.65rem;
   transform: translateX(-50%);
-  background-color: white;
+  background-color: teal;
   z-index: 1;
   display: none;
 }
 
-.button_bar {
+#button_bar {
   flex-direction: row;
   button {
     padding: 0.5rem 0.77rem 0.55rem 0.77rem;
@@ -97,7 +99,24 @@ body {
     background-color: var(--yellow);
     cursor: pointer;
   }
-  #hidePocket_btn {
+}
+
+#button_bar2 {
+  display: flex;
+  margin-bottom: 1.11rem;
+  margin-right: 1.11rem;
+  gap: 0.6rem;
+  z-index: 2;
+  display: none;
+  button {
+    padding: 0.5rem 0.77rem 0.55rem 0.77rem;
+    background-color: var(--yellow);
+    cursor: pointer;
+  }
+  input {
+    padding: 0.5rem 0.77rem 0.55rem 0.77rem;
+  }
+  #closeCanvas_btn {
     background-color: white;
   }
 }
