--- a/css/mountainstyle.scss
+++ b/css/mountainstyle.scss
@@ -22,7 +22,7 @@ body {
   position: relative;
 }
 
-.top {
+a.button {
   display: flex;
   position: absolute;
   padding: 0.4rem;
@@ -30,35 +30,48 @@ body {
   left: 50%;
   transform: translateX(-50%);
   background-color: beige;
+  cursor: pointer;
+  z-index: 20;
 }
 
-//stone container
-.stoneContainer {
+//pocket
+.pocket {
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 20;
+  bottom: 2rem;
+  right: -20rem;
+  padding: 1rem;
+  gap: 0.8rem;
+  background-color: rgb(255, 255, 255, 0.7);
+  backdrop-filter: blur(8px);
+  transition: right 0.5s ease;
+}
+.stoneContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
   gap: 0.6rem;
-  z-index: 20;
-  bottom: 2rem;
-  right: 2rem;
-  padding: 1rem;
-  background-color: rgb(255, 255, 255, 0.5);
 }
 .stoneContainer div {
   width: 4.5rem;
   height: 4.5rem;
-  background-color: blanchedalmond;
 }
 
 //stone element
 .stones {
   position: absolute;
   display: block;
-  z-index: 10;
+  z-index: 15;
+}
+.stones:hover {
+  mix-blend-mode: difference;
 }
 .stones img {
   position: absolute;
+  cursor: pointer;
 }
 .stones img:nth-child(13) {
   top: 52rem;
@@ -109,7 +122,7 @@ body {
   left: 60rem;
 }
 .stones img:nth-child(1) {
-  top: 1025rem;
+  top: 1005rem;
   left: 16rem;
 }
 
@@ -120,10 +133,10 @@ body {
   height: 17048px;
   overflow: hidden;
   display: flex;
+  z-index: 1;
 }
 .parallax-wrap span {
   position: absolute;
-  z-index: 1;
 }
 .parallax-wrap span:nth-child(1) {
   left: -4rem;
@@ -548,19 +561,30 @@ body {
   bottom: 1033rem;
   z-index: -1;
 }
-
-.greeting {
+//sign
+.sign {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  bottom: 0;
+  z-index: 20;
+}
+.greeting {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   padding: 1rem 1.375rem 1.25rem 1.375rem;
-  gap: 0.6rem;
   width: 22.375rem;
   bottom: 4rem;
+  gap: 0.8rem;
   background-color: white;
-  z-index: 5;
+}
+.stick {
+  width: 1.875rem;
+  height: 4.5rem;
+  background: rgb(203, 203, 203);
+  background: linear-gradient(180deg, rgba(203, 203, 203, 1) 0%, rgba(254, 254, 254, 1) 21%);
 }
