--- a/css/top.scss
+++ b/css/top.scss
@@ -12,31 +12,133 @@ html {
   font-style: normal;
 }
 
+:root {
+  --yellow: #fff980;
+  --grey: #d1d1d1;
+}
+
 body {
   position: relative;
 }
-
-#stoneContainer2 {
+//버튼 바
+.btnBar {
+  display: flex;
   flex-direction: row;
-  height: 5rem;
-  gap: 10px;
-  display: flex; // for now
-  //   display: none;
+  position: fixed;
+  gap: 1rem;
+  left: 2rem;
+  bottom: 2rem;
+  z-index: 10;
 }
-
-#canvas {
-  border: 1px solid #000;
-  //   display: none;
+.btnBar button,
+.btnBar a {
+  height: 2.725rem;
+  padding: 0rem 1rem;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
 }
-
+#openCanvasBtn {
+  background-color: var(--yellow);
+}
+#closeCanvasBtn {
+  background-color: var(--yellow);
+  display: none;
+}
+#goDown {
+  background-color: var(--grey);
+  color: black;
+  text-align: center;
+  text-decoration: none;
+}
+//배경 갤러리
 #collection {
   width: 100vw;
   height: 100vh;
-  background-color: aquamarine;
+  background: rgb(139, 153, 242);
+  background: linear-gradient(180deg, rgba(139, 153, 242, 1) 0%, rgba(102, 209, 238, 1) 55%);
 }
-
 #collection img {
   max-width: 200px;
   margin: 10px;
   border: 1px solid #000;
+}
+
+//캔버스와 포켓
+#canvasPocket {
+  display: none;
+  flex-direction: row;
+  position: fixed;
+  gap: 0;
+  align-items: end;
+  bottom: 2rem;
+  right: 2rem;
+}
+#canvasPocket.active {
+  display: flex;
+}
+
+//캔버스 컨테이너
+#canvasContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  height: 42.5rem;
+  padding: 1.25rem 1.875rem 1.25rem 1.875rem;
+  background-color: white;
+}
+#canvas {
+  box-shadow: inset 0px 0px 20px #dcdcdc;
+}
+.canvasBtnBar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 1rem;
+}
+#message {
+  flex-grow: 1;
+  padding: 0rem 1rem;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.canvasBtnBar button {
+  height: 2.725rem;
+  padding: 0rem 1rem;
+  border: none;
+}
+#stack {
+  background-color: var(--yellow);
+}
+#reset {
+  background-color: var(--grey);
+}
+
+//포켓 컨테이너
+.pocket {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.25rem 1.875rem 1.25rem 1.875rem;
+  height: 42.5rem;
+  gap: 1rem;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+#stoneContainer2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 0.6rem;
+}
+#stoneContainer2 img {
+  width: 100%;
+  height: 100%;
+  max-width: 4.5rem;
+  max-height: 4.5rem;
+  object-fit: contain;
 }
