--- a/css/top.scss
+++ b/css/top.scss
@@ -7,7 +7,8 @@
 }
 html {
   font-size: 16px;
-  font-family: "Arial Narrow", monospace;
+  text-decoration: none;
+  font-family: "Space Mono", system-ui;
   font-weight: 400;
   font-style: normal;
 }
@@ -40,7 +41,6 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  text-decoration: none;
 }
 #openCanvasBtn {
   background-color: var(--yellow);
@@ -57,15 +57,18 @@ body {
 }
 //배경 갤러리
 #collection {
-  width: 100vw;
+  width: 200vw;
   height: 100vh;
   background: rgb(139, 153, 242);
   background: linear-gradient(180deg, rgba(139, 153, 242, 1) 0%, rgba(102, 209, 238, 1) 55%);
+  overflow-x: scroll;
+  position: relative;
 }
 #collection img {
   max-width: 200px;
   margin: 10px;
-  border: 1px solid #000;
+  border: 1px solid rgba(255, 255, 255, 0.75);
+  position: absolute;
 }
 
 //캔버스와 포켓
@@ -87,9 +90,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  height: 42.5rem;
-  padding: 1.25rem 1.875rem 1.25rem 1.875rem;
+  gap: 1.5rem;
+  height: 37rem;
+  padding: 1.5rem 1.875rem 1.25rem 1.875rem;
   background-color: white;
 }
 #canvas {
@@ -124,8 +127,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.25rem 1.875rem 1.25rem 1.875rem;
-  height: 42.5rem;
+  padding: 1.5rem 1.875rem 1.25rem 1.875rem;
+  height: 37rem;
   gap: 1rem;
   background-color: rgba(255, 255, 255, 0.5);
 }
