--- a/css/mountainstyle.scss
+++ b/css/mountainstyle.scss
@@ -8,8 +8,9 @@
 
 html {
   font-size: 16px;
-  font-family: "Arial Narrow", monospace;
-  font-weight: 400;
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -20,6 +21,7 @@ body {
   overflow: scroll;
   align-items: center;
   position: relative;
+  overflow-x: hidden;
 }
 
 a.button {
@@ -33,8 +35,6 @@ a.button {
   cursor: pointer;
   z-index: 20;
 }
-
-//pocket
 .pocket {
   position: fixed;
   display: flex;
@@ -66,13 +66,16 @@ a.button {
   display: block;
   z-index: 15;
 }
-.stones:hover {
-  mix-blend-mode: difference;
-}
 .stones img {
   position: absolute;
   cursor: pointer;
+  transition: transform 0.3s ease;
 }
+.stones img:hover {
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
+}
+
 .stones img:nth-child(21) {
   top: 60rem;
   left: 48rem;
@@ -138,23 +141,23 @@ a.button {
   left: 20rem;
 }
 .stones img:nth-child(5) {
-  top: 800rem;
-  left: 12rem;
+  top: 790rem;
+  left: 8rem;
 }
 .stones img:nth-child(4) {
-  top: 856rem;
+  top: 823rem;
   left: 24rem;
 }
 .stones img:nth-child(3) {
-  top: 900rem;
+  top: 880rem;
   left: 60rem;
 }
 .stones img:nth-child(2) {
-  top: 970rem;
+  top: 920rem;
   left: 45rem;
 }
 .stones img:nth-child(1) {
-  top: 1005rem;
+  top: 980rem;
   left: 16rem;
 }
 
@@ -593,7 +596,6 @@ a.button {
   bottom: 1033rem;
   z-index: -1;
 }
-//sign
 .sign {
   display: flex;
   flex-direction: column;
@@ -608,11 +610,40 @@ a.button {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 1rem 1.375rem 1.25rem 1.375rem;
-  width: 22.375rem;
-  bottom: 4rem;
-  gap: 0.8rem;
+  padding: 2rem 2.8rem 2.5rem 2.8rem;
+  width: 32rem;
+  gap: 1rem;
   background-color: white;
+}
+.greeting div {
+  position: absolute;
+  width: 0.875rem;
+  height: 0.875rem;
+  border: 1.5px solid #000000;
+  border-radius: 100%;
+}
+.greeting div:nth-child(1) {
+  left: 1.25rem;
+  top: 1.25rem;
+}
+.greeting div:nth-child(2) {
+  top: 1.25rem;
+  right: 1.25rem;
+}
+.greeting div:nth-child(3) {
+  bottom: 5.85rem;
+  left: 1.25rem;
+}
+.greeting div:nth-child(4) {
+  bottom: 5.85rem;
+  right: 1.25rem;
+}
+.greeting h2 {
+  font-size: 30px;
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 .stick {
   width: 1.875rem;
