--- a/css/top.scss
+++ b/css/top.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: Pretendard;
+  src: url(../font/Pretendard-Light.subset.woff2) format(woff2), url(../font/Pretendard-Light.subset.woff) format(woff);
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,22 +12,26 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
+  height: 100vh;
+  overflow-y: hidden;
   font-size: 16px;
   text-decoration: none;
-  font-family: "Space Grotesk", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Space Grotesk", "Pretendard", sans-serif;
   font-weight: 300;
+  font-optical-sizing: auto;
   font-style: normal;
 }
 
 :root {
-  --yellow: #fff980;
+  --yellow: #fff766;
   --grey: #d1d1d1;
 }
 
 body {
   position: relative;
+  overflow-x: scroll;
 }
 
 .btnBar {
@@ -29,15 +40,24 @@ body {
   position: fixed;
   gap: 1rem;
   left: 2rem;
-  bottom: 2rem;
+  bottom: 2.4rem;
   z-index: 10;
 }
 .btnBar button {
+  font-size: 1rem;
   font-family: "Space Grotesk", sans-serif;
-  height: 2.725rem;
-  padding: 0rem 1rem;
+  font-weight: 300;
+  padding: 0.6rem 1rem;
+  border-radius: 0.5rem;
   border: none;
   cursor: pointer;
+}
+.btnBar button:nth-child(1),
+.btnBar button:nth-child(2) {
+  width: 5rem;
+}
+.btnBar button:hover {
+  filter: drop-shadow(0px 0px 10px #f7ff8c);
 }
 
 #openCanvasBtn {
@@ -47,37 +67,42 @@ body {
   background-color: var(--yellow);
   display: none;
 }
-//배경 갤러리
+
+// 배경 갤러리
 #collection {
-  width: 200vw;
-  height: 100vh;
-  background: rgb(139, 153, 242);
-  background: linear-gradient(180deg, rgba(139, 153, 242, 1) 0%, rgba(102, 209, 238, 1) 55%);
-  overflow-x: scroll;
+  width: 200vw; /* Ensure the page scrolls horizontally */
+  height: 100vh; /* Take full viewport height */
+  background: rgb(124, 140, 240);
+  background: linear-gradient(180deg, rgba(124, 140, 240, 1) 0%, rgba(71, 194, 227, 1) 57%);
   position: relative;
+  overflow-x: auto; /* Enable horizontal scrolling for this section */
 }
+
 #collection img {
   max-width: 200px;
   margin: 10px;
   border: 1px solid rgba(255, 255, 255, 0.75);
+  border-radius: 0.5rem;
   position: absolute;
 }
 
-//캔버스와 포켓
+// 캔버스와 포켓
 #canvasPocket {
-  display: none;
   flex-direction: row;
+  display: flex;
   position: fixed;
-  gap: 0;
+  gap: 1.2rem;
+  bottom: 3rem;
   align-items: end;
-  bottom: 2rem;
-  right: 2rem;
+  right: -100%;
+  transition: right 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s;
 }
 #canvasPocket.active {
+  right: 3rem;
   display: flex;
 }
 
-//캔버스 컨테이너
+// 캔버스 컨테이너
 #canvasContainer {
   display: flex;
   flex-direction: column;
@@ -86,26 +111,39 @@ body {
   height: 37rem;
   padding: 1.5rem 1.875rem 1.25rem 1.875rem;
   background-color: white;
+  border-radius: 1rem;
 }
 #canvas {
   box-shadow: inset 0px 0px 20px #dcdcdc;
+  border-radius: 1rem;
 }
 .canvasBtnBar {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 #message {
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
   flex-grow: 1;
   padding: 0rem 1rem;
   border: none;
   background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 0.5rem;
 }
 .canvasBtnBar button {
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
   height: 2.725rem;
   padding: 0rem 1rem;
   border: none;
+  border-radius: 0.5rem;
+}
+.canvasBtnBar button:hover {
+  filter: drop-shadow(0px 0px 10px #f7ff8c);
 }
 #stack {
   background-color: var(--yellow);
@@ -114,14 +152,15 @@ body {
   background-color: var(--grey);
 }
 
-//포켓 컨테이너
+// 포켓 컨테이너
 .pocket {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.5rem 1.875rem 1.25rem 1.875rem;
   height: 37rem;
-  gap: 1rem;
+  border-radius: 1rem;
+  gap: 0.5rem;
   background-color: rgba(255, 255, 255, 0.5);
 }
 #stoneContainer2 {
