--- a/css/top.scss
+++ b/css/top.scss
@@ -162,6 +162,7 @@ body {
   border-radius: 1rem;
   gap: 0.5rem;
   background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(8px);
 }
 #stoneContainer2 {
   display: grid;
