--- a/css/top.scss
+++ b/css/top.scss
@@ -177,3 +177,16 @@ body {
   max-height: 4.5rem;
   object-fit: contain;
 }
+
+.tooltip {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 0.6rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  max-width: 20rem;
+  white-space: normal; /* Allow text to wrap */
+  word-break: break-word; /* Break long words */
+  z-index: 100;
+  display: none; /* Hidden by default */
+}
