--- a/css/mountainstyle.scss
+++ b/css/mountainstyle.scss
@@ -26,7 +26,7 @@ body {
   background: rgb(11, 124, 46);
   background: linear-gradient(0deg, rgba(11, 124, 46, 1) 0%, rgba(18, 167, 64, 1) 19%, rgba(28, 202, 82, 1) 41%, rgba(58, 219, 101, 1) 60%, rgba(100, 232, 177, 1) 81%, rgba(139, 242, 230, 1) 100%);
   overflow: scroll;
-  align-items: center;
+  // align-items: center;
   position: relative;
   overflow-x: hidden;
 }
@@ -884,4 +884,20 @@ a.button:hover {
   height: 3rem;
   background: rgb(203, 203, 203);
   background: linear-gradient(180deg, rgba(203, 203, 203, 1) 0%, rgba(254, 254, 254, 1) 21%);
+}
+.mobile-message {
+  display: none; /* 기본적으로 숨김 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1dc24f;
+  color: white;
+  display: flex;
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center;
+  text-align: center;
+  font-size: 0.9rem;
+  z-index: 9999; /* 화면 위에 오도록 설정 */
 }
